# labs

./: .gitignore  .gitmodules  README.md
1stSem/Lab2/: CMakeLists.txt  README.md
1stSem/Lab4/: CMakeLists.txt  README.md  main.cpp
1stSem/Lab6/: main.cpp  text.txt
2ndSem/Interactive Mode Helper (Lab7)/: README.md
2ndSem/Lab1/: README.md  databaseFunctions.h  main.cpp  sort.h
2ndSem/Lab2a/: CMakeLists.txt  Listbased.h  benchmark.cpp
2ndSem/Lab2b/: CMakeLists.txt  jobScheduler.h  scheduleShow.txt  schedulerFunc.h
2ndSem/Lab3a/: CMakeLists.txt  benchmarking.h  sortAlgorithms.h  stringComparison.h
2ndSem/Lab3c/: CMakeLists.txt  benchmarking.h  main.cpp  timsort.h
2ndSem/Lab4/: CMakeLists.txt  README.md  binarytree.h  file.cpp  file.h  filesystem.h  interactive.h  main.cpp  show.txt
2ndSem/Lab5/: BenchmarkResults.txt  CMakeLists.txt  main.cpp
2ndSem/Lab6/: CMakeLists.txt  README.md  main.cpp
3rdSem/lab1/: test.cpp
3rdSem/lab2/: README.md  lab2.pro
4thSem/lab1/: BenchmarkResults.txt  CMakeLists.txt  NewVersion.xmi  OldVersion.xmi  README.md  test.cpp
4thSem/lab1/NewVersion/: BenchmarkResults.txt  CMakeLists.txt  benchmark.cpp  test.cpp
4thSem/lab1/NewVersion/src/: DynamicArray.hpp  DynamicArray.tpp  LinkedList.hpp  LinkedList.tpp  Queue.hpp  QueueInterface.hpp  StaticArray.tpp
4thSem/lab3a/: CMakeLists.txt  QuickSort.hpp  QuickSortImpl.hpp  README.md  TestUtils.hpp  benchmark.cpp  benchmarkResults.txt  main.cpp  tests.cpp
Lab1/: CMakeLists.txt  benchmarkFunctions.h  benchmarkresults  databaseFunctions.h  main.cpp  monster.h
Lab1/texttable/: TextTable.h
firstSem/Lab2/: main.cpp
firstSem/Lab5/: CMakeLists.txt  README.md  main.cpp
firstSem/Lab6/: CMakeLists.txt  README.md
secondSem/Interactive Mode Helper (Lab7)/: CMakeLists.txt  README.md  example.cpp  main.cpp
(+263 files in other folders)
